--- a/index.html
+++ b/index.html
@@ -236,17 +236,6 @@
                     src="./assets/img/chigaitaichinh1.jpeg"
                     alt="Chị gái tài chính"
                 />
-
-                <!-- Trend -->
-                <div class="stats-trend">
-                    <div class="row">
-                    </div>
-                    <p class="desc">
-                        Chủ kênh "Chị Gái Tài Chính" với hơn 40k follow
-                    </p>
-                    <div class="separate"></div>
-
-                </div>
             </div>
             <div class="info">
                 <h2 class="sub-title">
@@ -267,25 +256,23 @@
                 </ul>
             </div>
         </div>
-        <div class="row row-qty">
-            <div class="qty-item">
-                <p class="qty">Trên mạng xã hội, Hải Yến có <span class="bold">hơn 50,000 người theo dõi với hơn 10 triệu lượt xem</span> nhờ cách chia sẻ kiến thức tài chính đơn giản, rõ ràng và thực tế:</p>
-            </div>
-        </div>
+        <h2 class="sub-title" style="margin-top: 50px;margin-left: auto;margin-right: auto; width: 60vw;">
+             Trên mạng xã hội, Hải Yến có <span class="bold">hơn 50,000 người theo dõi với hơn 10 triệu lượt xem</span> nhờ cách chia sẻ kiến thức tài chính đơn giản, rõ ràng và thực tế:
+        </h2>
         <div class="row row-qty2">
             <div class="qty-item1">
-                <p class="qty1">@chigaitaichinh</p>
+                <a href="https://www.tiktok.com/@chigaitaichinh" rel="noopener"><p class="qty1">@chigaitaichinh</p></a>
                 <p class="qty-desc">Hướng dẫn về thuế, tài chính cá nhân.
                 </p>
             </div>
             <div class="qty-item1">
-                <p class="qty1">@sachhaytuchutaichinh</p>
+                <a href="https://www.tiktok.com/@sachhaytuchutaichinh" rel="noopener"><p class="qty1">@sachhaytuchutaichinh</p></a>
                 <p class="qty-desc">
                     Chia sẻ kiến thức tài chính, kinh doanh qua những cuốn sách giá trị.
                 </p>
             </div>
             <div class="qty-item1">
-                <p class="qty1">@taichinhchochumoi</p>
+                <a href="https://www.tiktok.com/@taichinhchochumoi" rel="noopener"><p class="qty1">@taichinhchochumoi</p></a>
                 <p class="qty-desc">
                     Dành cho chủ doanh nghiệp mới, tập trung vào kiến thức tài chính cốt lõi.
                 </p>
@@ -293,46 +280,43 @@
         </div>
     </div>
 </div>
-
-
 <div id="resources" class="stats">
-    <div class="content">
-        <div class="row">
-            <div class="info1">
-                <h2 class="sub-title">
-                    Làm sao để đăng ký khóa học “Tài Chính Đơn Giản Cho Chủ Mới”?
-                </h2>
-                <p class="desc">
-                    Đây là lớp học chọn lọc – không phải ai cũng phù hợp để tham gia.
-                </p>
-                <p class="desc">
-                    Sau khi đăng ký, bạn sẽ tham gia buổi học đầu tiên với tôi.
-                </p>
-                <p class="desc">
-                    Sau buổi học đầu tiên, tôi sẽ trao đổi để xem liệu bạn có thực sự phù hợp.
-                </p>
-                <p class="desc">
-                    Nếu bạn và tôi cùng chung nhân sinh quan, và bạn có mục tiêu rõ ràng cho việc học,  và cam kết thực thi
-                    áp dụng kiến thức vào công việc kinh doanh hướng tới sự thành công thì chúc mừng bạn , chúng ta sẽ đồng hành cùng nhau trong lộ trình sắp tới.
-                </p>
-                <p class="desc adesc">
-                    Lưu ý:
-                </p>
-                <p class="desc adesc" style="font-size: 3rem;">
-                    "Phải học xong mới được đóng tiền"
-                </p>
-            </div>
-            <div class="img-block">
-                <img
-                    class="image"
-                    src="./assets/img/why-icon.png"
-                    alt="icon"
-                />
-            </div>
+<div class="content">
+    <div class="row">
+        <div class="info">
+            <h2 class="sub-title">
+                Làm sao để đăng ký khóa học “Tài Chính Đơn Giản Cho Chủ Mới”?
+            </h2>
+            <p class="desc">
+                Đây là lớp học chọn lọc – không phải ai cũng phù hợp để tham gia.
+            </p>
+            <p class="desc">
+                Sau khi đăng ký, bạn sẽ tham gia buổi học đầu tiên với tôi.
+            </p>
+            <p class="desc">
+                Sau buổi học đầu tiên, tôi sẽ trao đổi để xem liệu bạn có thực sự phù hợp.
+            </p>
+            <p class="desc">
+                Nếu bạn và tôi cùng chung nhân sinh quan, và bạn có mục tiêu rõ ràng cho việc học,  và cam kết thực thi
+                áp dụng kiến thức vào công việc kinh doanh hướng tới sự thành công thì chúc mừng bạn , chúng ta sẽ đồng hành cùng nhau trong lộ trình sắp tới.
+            </p>
+            <p class="desc adesc">
+                Lưu ý:
+            </p>
+            <p class="desc adesc" style="font-size: 3rem;">
+                "Phải học xong mới được đóng tiền"
+            </p>
         </div>
+        <div class="img-block">
+            <img
+                class="image"
+                src="./assets/img/why-icon.png"
+                alt="Chị gái tài chính"
+            />
+        </div>
+    </div>
 </div>
-
-
+</div>
 
 <div class="guide-cta">
     <a href="tel:0777727801" class="btn">ĐĂNG KÝ NGAY!!</a>
