--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <!-- Action -->
                     <div class="actions">
                         <a href="https://zalo.me/g/rizrkp003" type="noopener" class="action-link">Nghe tư vấn</a>
-                        <a href="https://forms.gle/K3rooFGLeNzHoamA7" rel="noopener" class="btn">ĐĂNG KÝ NGAY!!</a>
+                        <a href="https://forms.gle/K3rooFGLeNzHoamA7" rel="noopener" target="_blank" class="btn">ĐĂNG KÝ NGAY!!</a>
                     </div>
                 </nav>
             </div>
