--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p class="desc desc2">
                             "Phải học xong buổi đầu mới <span style="color:red">được</span> đóng tiền"
                         </p>
-                        <a href="https://forms.gle/K3rooFGLeNzHoamA7" rel="noopener" class="btn">ĐĂNG KÝ NGAY!!</a>
+                        <a href="https://forms.gle/K3rooFGLeNzHoamA7" rel="noopener" target="_blank" class="btn">ĐĂNG KÝ NGAY!!</a>
                     </div>
 
                     <img
@@ -137,7 +137,7 @@
             Hãy ngừng mơ mộng và bắt đầu kiểm soát đồng tiền ngay bây giờ!
         </p>
         <div class="guide-cta">
-            <a href="https://forms.gle/K3rooFGLeNzHoamA7" rel="noopener" class="btn">ĐĂNG KÝ NGAY!!</a>
+            <a href="https://forms.gle/K3rooFGLeNzHoamA7" rel="noopener" target="_blank" class="btn">ĐĂNG KÝ NGAY!!</a>
         </div>
 </div>
 
@@ -190,7 +190,7 @@
         </ul>
         <p class="sub-title2" style="font-style: italic;">Tôi có thể giúp bạn hiện thực hoá điều đó!</p>
         <div class="guide-cta">
-            <a href="https://forms.gle/K3rooFGLeNzHoamA7" rel="noopener" class="btn">ĐĂNG KÝ NGAY!!</a>
+            <a href="https://forms.gle/K3rooFGLeNzHoamA7" rel="noopener" target="_blank" class="btn">ĐĂNG KÝ NGAY!!</a>
         </div>
 </div>
 
@@ -319,7 +319,7 @@
 </div>
 
 <div class="guide-cta">
-    <a href="https://forms.gle/K3rooFGLeNzHoamA7" rel="noopener" class="btn">ĐĂNG KÝ NGAY!!</a>
+    <a href="https://forms.gle/K3rooFGLeNzHoamA7" rel="noopener" target="_blank" class="btn">ĐĂNG KÝ NGAY!!</a>
 </div>
 </main>
         <script>
